# personality

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md
.github/workflows/: deploy.yaml
.woodpecker/: deploy.yaml
assets/: main.css
src/: home.rs  lib.rs  links.rs  main.rs  posts.rs  projects.rs  publications.rs
src/posts/: open_letters.rs  writings.rs
